Configuration/k8s/ELK/Normal install/Kibana/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk-new
spec:
  type: ClusterIP
  ports:
    - port: 5601
      targetPort: 5601
  selector:
    app: kibana
